Updated Server and Client

--- a/server/config.env
+++ b/server/config.env
@@ -1,3 +1,2 @@
-ATLAS_URI = mongodb+srv://jnatc1:K1nn1th1K1nn1th1@cs-545-cluster.wskgkdr.mongodb.net/?retryWrites=true&w=majorityPORT=5000
-
-
+ATLAS_URI = mongodb+srv://jnatc1:K1nn1th1K1nn1th1@cs-545-cluster.wskgkdr.mongodb.net/?retryWrites=true&w=majority
+PORT = 3000
