--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^6.2.0",
     "nodemon": "^3.0.1",
     "react-router-dom": "^6.18.0"
