--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "firebase": "^10.6.0",
     "mongodb": "^6.2.0",
     "nodemon": "^3.0.1",
     "react-router-dom": "^6.18.0"
